Debugged issues with calc js

--- a/index.html
+++ b/index.html
@@ -14,35 +14,30 @@
     </header>
 
     <body>
-        <div class="outer">
-            <div class="calc-container">
-                <div class="output" id="outrow1">Output #1</div>
-                <div class="output" id="outrow2">Output #2</div>
-                <div class="output" id="outrow3">Output #3</div>
-                <div class="output" id="outrow4">Output #4</div>
-                <button id="clear">Clear</button>
-                <button id="backspace"><img src="imgs/backspace_img.png"></button>
-                <button id="leftp">(</button>
-                <button id="rightp">)</button>
-                <button id="sqrt"><img src="imgs/sqrt_img.png"></button>
-                <button id="divide"><img src="imgs/divide_img.jpg"></button>
-                <button id="seven">7</button>
-                <button id="eight">8</button>
-                <button id="nine">9</button>
-                <button id="multiply"><img src="imgs/multiply_img.png"></button>
-                <button id="four">4</button>
-                <button id="five">5</button>
-                <button id="six">6</button>
-                <button id="minus">-</button>
-                <button id="one">1</button>
-                <button id="two">2</button>
-                <button id="three">3</button>
-                <button id="plus">+</button>
-                <button id="zero">0</button>
-                <button id="decimal">.</button>
-                <button id="ans">ans</button>
-                <button id="return">=</button>
-            </div>
+        <div class="calc-container">
+            <button id="output"></button>
+            <button id="clear">Clear</button>
+            <button id="backspace"><img src="imgs/backspace_img.png"></button>
+            <button id="leftp">(</button>
+            <button id="rightp">)</button>
+            <button id="sqrt"><img src="imgs/sqrt_img.png"></button>
+            <button id="divide"><img src="imgs/divide_img.jpg"></button>
+            <button id="seven">7</button>
+            <button id="eight">8</button>
+            <button id="nine">9</button>
+            <button id="multiply"><img src="imgs/multiply_img.png"></button>
+            <button id="four">4</button>
+            <button id="five">5</button>
+            <button id="six">6</button>
+            <button id="minus">-</button>
+            <button id="one">1</button>
+            <button id="two">2</button>
+            <button id="three">3</button>
+            <button id="plus">+</button>
+            <button id="zero">0</button>
+            <button id="decimal">.</button>
+            <button id="ans">ans</button>
+            <button id="return">=</button>
         </div>
     </body>
     <script src="calc.js"></script>
